finished spinning animation

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,19 @@
         <title>Document</title>
     </head>
     <body>
+        <div id="loader"></div>
         <table class="data"></table>
+        <dialog>
+            <form>
+                <div class="input-container">
+                    <label for="location">Enter New Location:</label>
+                    <input type="text" id="location" required />
+                </div>
+                <div class="btn-container">
+                    <button class="submit-btn" type="submit">Submit</button>
+                </div>
+            </form>
+        </dialog>
+        <button class="location-btn">Enter New Location</button>
     </body>
 </html>
